k8s/apps/watcharr/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watcharr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watcharr
  namespace: watcharr
  labels:
    app.kubernetes.io/name: watcharr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: watcharr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watcharr
    spec:
      containers:
        - name: watcharr
          image: ghcr.io/sbondco/watcharr:v4.1.1@sha256:3db9c6bcc29ca39e8517be3e1cece4c9139ff6d07293d6e70251173304ad992a
          ports:
            - containerPort: 3080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: watcharr-data
---
apiVersion: v1
kind: Service
metadata:
  name: watcharr
  namespace: watcharr
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: watcharr
  ports:
    - port: 80
      targetPort: 3080
      name: http
