k8s/apps/watcharr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: watcharr
  namespace: watcharr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Watcharr"
    gethomepage.dev/description: "Media watch tracking"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "watcharr.png"
    gethomepage.dev/href: "https://watcharr.item.fyi"
    gethomepage.dev/siteMonitor: "http://watcharr.watcharr.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=watcharr"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`watcharr.item.fyi`)
      services:
        - name: watcharr
          port: 80
  tls: {}
